cmake_minimum_required(VERSION 2.8.9)
include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
project(v_csc)

collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
include_directories(${CMAKE_BINARY_DIR}/include)
collect (PROJECT_LIB_SOURCES xv_csc.c)
collect (PROJECT_LIB_SOURCES xv_csc_g.c)
collect (PROJECT_LIB_HEADERS xv_csc_hw.h)
collect (PROJECT_LIB_SOURCES xv_csc_l2.c)
collect (PROJECT_LIB_HEADERS xv_csc_l2.h)
collect (PROJECT_LIB_SOURCES xv_csc_linux.c)
collect (PROJECT_LIB_HEADERS xv_csc.h)
collect (PROJECT_LIB_SOURCES xv_csc_sinit.c)
collector_list (_sources PROJECT_LIB_SOURCES)
collector_list (_headers PROJECT_LIB_HEADERS)
file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
add_library(v_csc STATIC ${_sources})
set_target_properties(v_csc PROPERTIES LINKER_LANGUAGE C)
install(TARGETS v_csc LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
